2007-12-27  Brian Matherly <brian@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: Better default for report output.
	* src/gen/db/dbconst.py: Remove constants that are duplicated in const.py.
	* src/GrampsDb/_GrampsBSDDB.py: Use ENV_DIR from const.py.

2007-12-27  Brian Matherly <brian@gramps-project.org>
	* src/docgen/CairoDoc.py: Fix 0001431: Tried to run a statistics report:

2007-12-27  Brian Matherly <brian@gramps-project.org>
	* src/plugins/DescendReport.py:
	* src/plugins/AncestorReport.py:
	Convert to use MenuOption

2007-12-27  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/MyGrampsView.py:
	* src/DataViews/SourceView.py:
	* src/DataViews/__init__.py:
	* src/DataViews/NoteView.py:
	* src/DataViews/PersonView.py:
	* src/DataViews/RelationView.py:
	* src/DataViews/MapView.py:
	* src/DataViews/MediaView.py:
	* src/DataViews/RepositoryView.py:
	* src/DataViews/EventView.py:
	* src/DataViews/FamilyList.py:
	* src/DataViews/PedigreeView.py:
	* src/DataViews/PlaceView.py:
	* src/DataViews/Makefile.am:
	Renamed DataViews views to new style

2007-12-27  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_MyGrampsView.py: added API for data save/load
	* src/plugins/DefaultGadgets.py: top surnames takes count; TODO saves

2007-12-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_MyGrampsView.py: added tooltips, cleanup, menu work
	* src/plugins/DefaultGadgets.py: fine tuning
	* src/glade/gramps.glade: added tooltips

2007-12-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_MyGrampsView.py: saves on quit only, load/save api

2007-12-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ViewManager.py: added __delete_pages called on quit
	* src/PageView.py: added on_delete method called on quit

2007-12-24  Brian Matherly <brian@gramps-project.org>
	* src/const.py.in: Move the entire Gramps dir under "Application Data" in 
	Windows.

2007-12-24  Brian Matherly <brian@gramps-project.org>