@@ -1,4 +1,8 @@
 2007-12-27  Brian Matherly <brian@gramps-project.org>
+	* src/ReportBase/_GraphvisReportDialog.py: Fix to conform to 80 columns.
+	Add Graphviz generated PDF as an option (requires Graphviz 2.16 to work)
+
+2007-12-27  Brian Matherly <brian@gramps-project.org>
 	* src/Config/_GrampsConfigKeys.py: Better default for report output.
 	* src/gen/db/dbconst.py: Remove constants that are duplicated in const.py.
 	* src/GrampsDb/_GrampsBSDDB.py: Use ENV_DIR from const.py.
